antlr-generated/expressionEvaluator/GateGrammarParser.java
// $ANTLR 3.4 D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g 2012-08-06 13:41:33

package expressionEvaluator;

import java.util.LinkedList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class GateGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGIT", "DOT", "EXPONENT", "FLOAT", "LETTER", "MATH", "NEGATION", "SIGN", "TIME", "VOLTAGE", "WS", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'<'", "'<='", "'=='", "'>'", "'>='", "'^'", "'if'", "'||'"
    };

    public static final int EOF=-1;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int DIGIT=4;
    public static final int DOT=5;
    public static final int EXPONENT=6;
    public static final int FLOAT=7;
    public static final int LETTER=8;
    public static final int MATH=9;
    public static final int NEGATION=10;
    public static final int SIGN=11;
    public static final int TIME=12;
    public static final int VOLTAGE=13;
    public static final int WS=14;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GateGrammarParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GateGrammarParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return GateGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g"; }



        private List<String> errors = new LinkedList<String>();
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            errors.add(hdr + " " + msg);
        }
        public List<String> getErrors() {
            return errors;
        }

    private void checkSingleMath(String fn) throws RecognitionException {
    if( fn.equals("exp") ) return;
    if( fn.equals("sin") ) return;
    if( fn.equals("cos") ) return;
    if( fn.equals("tan") ) return;
    if( fn.equals("abs") ) return;
    throw new RecognitionException();
    }

    private void checkDoubleMath(String fn) throws RecognitionException {
    if( fn.equals("min") ) return;
    if( fn.equals("max") ) return;
    throw new RecognitionException();
    }



    public static class gateExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "gateExpression"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:55:1: gateExpression : add EOF !;
    public final GateGrammarParser.gateExpression_return gateExpression() throws RecognitionException {
        GateGrammarParser.gateExpression_return retval = new GateGrammarParser.gateExpression_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        GateGrammarParser.add_return add1 =null;


        CommonTree EOF2_tree=null;

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:55:16: ( add EOF !)
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:55:18: add EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_add_in_gateExpression77);
            add1=add();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, add1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_gateExpression79); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "gateExpression"


    public static class term_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "term"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:57:1: term : ( FLOAT | VOLTAGE | TIME | '(' ! add ')' !| MATH ^ '(' ! add ')' !| MATH ^ '(' ! add ',' ! add ')' !| ternary );
    public final GateGrammarParser.term_return term() throws RecognitionException {
        GateGrammarParser.term_return retval = new GateGrammarParser.term_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token FLOAT3=null;
        Token VOLTAGE4=null;
        Token TIME5=null;
        Token char_literal6=null;
        Token char_literal8=null;
        Token MATH9=null;
        Token char_literal10=null;
        Token char_literal12=null;
        Token MATH13=null;
        Token char_literal14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        GateGrammarParser.add_return add7 =null;

        GateGrammarParser.add_return add11 =null;

        GateGrammarParser.add_return add15 =null;

        GateGrammarParser.add_return add17 =null;

        GateGrammarParser.ternary_return ternary19 =null;


        CommonTree FLOAT3_tree=null;
        CommonTree VOLTAGE4_tree=null;
        CommonTree TIME5_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree MATH9_tree=null;
        CommonTree char_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree MATH13_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:58:3: ( FLOAT | VOLTAGE | TIME | '(' ! add ')' !| MATH ^ '(' ! add ')' !| MATH ^ '(' ! add ',' ! add ')' !| ternary )
            int alt1=7;
            switch ( input.LA(1) ) {
            case FLOAT:
                {
                alt1=1;
                }
                break;
            case VOLTAGE:
                {
                alt1=2;
                }
                break;
            case TIME:
                {
                alt1=3;
                }
                break;
            case 18:
                {
                alt1=4;
                }
                break;
            case MATH:
                {
                int LA1_5 = input.LA(2);

                if ( (synpred5_GateGrammar()) ) {
                    alt1=5;
                }
                else if ( (synpred6_GateGrammar()) ) {
                    alt1=6;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 5, input);

                    throw nvae;

                }
                }
                break;
            case 31:
                {
                alt1=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:58:5: FLOAT
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    FLOAT3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_term91); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    FLOAT3_tree = 
                    (CommonTree)adaptor.create(FLOAT3)
                    ;
                    adaptor.addChild(root_0, FLOAT3_tree);
                    }

                    }
                    break;
                case 2 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:59:5: VOLTAGE
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    VOLTAGE4=(Token)match(input,VOLTAGE,FOLLOW_VOLTAGE_in_term97); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    VOLTAGE4_tree = 
                    (CommonTree)adaptor.create(VOLTAGE4)
                    ;
                    adaptor.addChild(root_0, VOLTAGE4_tree);
                    }

                    }
                    break;
                case 3 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:60:5: TIME
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    TIME5=(Token)match(input,TIME,FOLLOW_TIME_in_term103); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    TIME5_tree = 
                    (CommonTree)adaptor.create(TIME5)
                    ;
                    adaptor.addChild(root_0, TIME5_tree);
                    }

                    }
                    break;
                case 4 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:61:5: '(' ! add ')' !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    char_literal6=(Token)match(input,18,FOLLOW_18_in_term109); if (state.failed) return retval;

                    pushFollow(FOLLOW_add_in_term112);
                    add7=add();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, add7.getTree());

                    char_literal8=(Token)match(input,19,FOLLOW_19_in_term114); if (state.failed) return retval;

                    }
                    break;
                case 5 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:62:5: MATH ^ '(' ! add ')' !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    MATH9=(Token)match(input,MATH,FOLLOW_MATH_in_term121); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MATH9_tree = 
                    (CommonTree)adaptor.create(MATH9)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(MATH9_tree, root_0);
                    }

                    char_literal10=(Token)match(input,18,FOLLOW_18_in_term124); if (state.failed) return retval;

                    pushFollow(FOLLOW_add_in_term127);
                    add11=add();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, add11.getTree());

                    char_literal12=(Token)match(input,19,FOLLOW_19_in_term129); if (state.failed) return retval;

                    if ( state.backtracking==0 ) {checkSingleMath((MATH9!=null?MATH9.getText():null));}

                    }
                    break;
                case 6 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:63:5: MATH ^ '(' ! add ',' ! add ')' !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    MATH13=(Token)match(input,MATH,FOLLOW_MATH_in_term138); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MATH13_tree = 
                    (CommonTree)adaptor.create(MATH13)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(MATH13_tree, root_0);
                    }

                    char_literal14=(Token)match(input,18,FOLLOW_18_in_term141); if (state.failed) return retval;

                    pushFollow(FOLLOW_add_in_term144);
                    add15=add();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, add15.getTree());

                    char_literal16=(Token)match(input,22,FOLLOW_22_in_term146); if (state.failed) return retval;

                    pushFollow(FOLLOW_add_in_term149);
                    add17=add();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, add17.getTree());

                    char_literal18=(Token)match(input,19,FOLLOW_19_in_term151); if (state.failed) return retval;

                    if ( state.backtracking==0 ) {checkDoubleMath((MATH13!=null?MATH13.getText():null));}

                    }
                    break;
                case 7 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:64:5: ternary
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_ternary_in_term160);
                    ternary19=ternary();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ternary19.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "term"


    public static class unary_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "unary"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:67:1: unary : ( '+' !| negation ^)? term ;
    public final GateGrammarParser.unary_return unary() throws RecognitionException {
        GateGrammarParser.unary_return retval = new GateGrammarParser.unary_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal20=null;
        GateGrammarParser.negation_return negation21 =null;

        GateGrammarParser.term_return term22 =null;


        CommonTree char_literal20_tree=null;

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:68:3: ( ( '+' !| negation ^)? term )
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:69:3: ( '+' !| negation ^)? term
            {
            root_0 = (CommonTree)adaptor.nil();


            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:69:3: ( '+' !| negation ^)?
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==21) ) {
                alt2=1;
            }
            else if ( (LA2_0==23) ) {
                alt2=2;
            }
            switch (alt2) {
                case 1 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:69:4: '+' !
                    {
                    char_literal20=(Token)match(input,21,FOLLOW_21_in_unary179); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:69:11: negation ^
                    {
                    pushFollow(FOLLOW_negation_in_unary184);
                    negation21=negation();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) root_0 = (CommonTree)adaptor.becomeRoot(negation21.getTree(), root_0);

                    }
                    break;

            }


            pushFollow(FOLLOW_term_in_unary189);
            term22=term();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, term22.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "unary"


    public static class negation_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "negation"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:72:1: negation : '-' -> NEGATION ;
    public final GateGrammarParser.negation_return negation() throws RecognitionException {
        GateGrammarParser.negation_return retval = new GateGrammarParser.negation_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal23=null;

        CommonTree char_literal23_tree=null;
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:73:1: ( '-' -> NEGATION )
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:74:1: '-'
            {
            char_literal23=(Token)match(input,23,FOLLOW_23_in_negation201); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_23.add(char_literal23);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 74:5: -> NEGATION
            {
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(NEGATION, "NEGATION")
                );

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "negation"


    public static class power_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "power"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:77:1: power : unary ( '^' ^ unary )* ;
    public final GateGrammarParser.power_return power() throws RecognitionException {
        GateGrammarParser.power_return retval = new GateGrammarParser.power_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal25=null;
        GateGrammarParser.unary_return unary24 =null;

        GateGrammarParser.unary_return unary26 =null;


        CommonTree char_literal25_tree=null;

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:78:1: ( unary ( '^' ^ unary )* )
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:79:1: unary ( '^' ^ unary )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_unary_in_power214);
            unary24=unary();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, unary24.getTree());

            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:79:7: ( '^' ^ unary )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==30) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:79:8: '^' ^ unary
            	    {
            	    char_literal25=(Token)match(input,30,FOLLOW_30_in_power217); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal25_tree = 
            	    (CommonTree)adaptor.create(char_literal25)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(char_literal25_tree, root_0);
            	    }

            	    pushFollow(FOLLOW_unary_in_power220);
            	    unary26=unary();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, unary26.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "power"


    public static class mult_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mult"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:82:1: mult : power ( ( '*' ^| '/' ^) power )* ;
    public final GateGrammarParser.mult_return mult() throws RecognitionException {
        GateGrammarParser.mult_return retval = new GateGrammarParser.mult_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal28=null;
        Token char_literal29=null;
        GateGrammarParser.power_return power27 =null;

        GateGrammarParser.power_return power30 =null;


        CommonTree char_literal28_tree=null;
        CommonTree char_literal29_tree=null;

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:83:3: ( power ( ( '*' ^| '/' ^) power )* )
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:84:3: power ( ( '*' ^| '/' ^) power )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_power_in_mult235);
            power27=power();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, power27.getTree());

            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:84:10: ( ( '*' ^| '/' ^) power )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==20||LA5_0==24) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:84:11: ( '*' ^| '/' ^) power
            	    {
            	    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:84:11: ( '*' ^| '/' ^)
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==20) ) {
            	        alt4=1;
            	    }
            	    else if ( (LA4_0==24) ) {
            	        alt4=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 4, 0, input);

            	        throw nvae;

            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:84:12: '*' ^
            	            {
            	            char_literal28=(Token)match(input,20,FOLLOW_20_in_mult240); if (state.failed) return retval;
            	            if ( state.backtracking==0 ) {
            	            char_literal28_tree = 
            	            (CommonTree)adaptor.create(char_literal28)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal28_tree, root_0);
            	            }

            	            }
            	            break;
            	        case 2 :
            	            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:84:19: '/' ^
            	            {
            	            char_literal29=(Token)match(input,24,FOLLOW_24_in_mult245); if (state.failed) return retval;
            	            if ( state.backtracking==0 ) {
            	            char_literal29_tree = 
            	            (CommonTree)adaptor.create(char_literal29)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal29_tree, root_0);
            	            }

            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_power_in_mult249);
            	    power30=power();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, power30.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mult"


    public static class add_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "add"
    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:87:1: add : mult ( ( '+' ^| '-' ^) mult )* ;
    public final GateGrammarParser.add_return add() throws RecognitionException {
        GateGrammarParser.add_return retval = new GateGrammarParser.add_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal32=null;
        Token char_literal33=null;
        GateGrammarParser.mult_return mult31 =null;

        GateGrammarParser.mult_return mult34 =null;


        CommonTree char_literal32_tree=null;
        CommonTree char_literal33_tree=null;

        try {
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:88:3: ( mult ( ( '+' ^| '-' ^) mult )* )
            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:89:3: mult ( ( '+' ^| '-' ^) mult )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_mult_in_add264);
            mult31=mult();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, mult31.getTree());

            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:89:8: ( ( '+' ^| '-' ^) mult )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==21||LA7_0==23) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:89:9: ( '+' ^| '-' ^) mult
            	    {
            	    // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:89:9: ( '+' ^| '-' ^)
            	    int alt6=2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0==21) ) {
            	        alt6=1;
            	    }
            	    else if ( (LA6_0==23) ) {
            	        alt6=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 6, 0, input);

            	        throw nvae;

            	    }
            	    switch (alt6) {
            	        case 1 :
            	            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:89:10: '+' ^
            	            {
            	            char_literal32=(Token)match(input,21,FOLLOW_21_in_add268); if (state.failed) return retval;
            	            if ( state.backtracking==0 ) {
            	            char_literal32_tree = 
            	            (CommonTree)adaptor.create(char_literal32)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal32_tree, root_0);
            	            }

            	            }
            	            break;
            	        case 2 :
            	            // D:\\Stuff\\Dropbox\\eclipse\\TableTool\\src\\expressionEvaluator\\GateGrammar.g:89:17: '-' ^
            	            {
            	            char_literal33=(Token)match(input,23,FOLLOW_23_in_add273); if (state.failed) return retval;
            	            if ( state.backtracking==0 ) {
            	            char_literal33_tree = 
            	            (CommonTree)adaptor.create(char_literal33)
            	            ;
            	            root_0 = (CommonTree)adaptor.becomeRoot(char_literal33_tree, root_0);
            	            }

            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_mult_in_add277);
            	    mult34=mult();

            	    state._fsp--;
            	    if (state.failed) return retval;
